--- a/Projects/Redline/style.css
+++ b/Projects/Redline/style.css
@@ -1,14 +1,14 @@
-
-
-#debut {
+#debut{  
     background-image: url(img/cinema.jpg);
     background-size: cover; 
     background-position: center; 
     opacity: 1;
 }
-.nav
+.navbar .navbar-brand
 {
     text-decoration-color: white;
+    font-size: 30px;
+    font-weight: 20px;
 }
 .navbar-brand{
     font-size: larger;
@@ -27,16 +27,16 @@
 }
  .text-bg span {
     font-size: 80px;
-line-height: 80px;
+line-height: 70px;
 color: #c90d0d;
 text-transform: uppercase;
  }
-.text-bg h1, h2, h3{
+.text-bg h1, h3{
 color: rgb(10, 10, 10);
 padding-top: 20px;
-font-size: 30px;
-line-height: 20px;
-padding-bottom: 20px;
+font-size: 40px;
+line-height: 10px;
+padding-bottom: 30px;
 text-transform: uppercase;
 font-weight:bold;
 }
@@ -60,4 +60,10 @@ width: 100%;
 text-align: center;
 border-radius: 30px;
 margin-right: 10px;
+}
+#fimls
+{
+}
+body{
+    background-color:rgb(234, 234, 241);
 }
