--- a/Projects/Redline/style.css
+++ b/Projects/Redline/style.css
@@ -27,21 +27,22 @@
 }
  .text-bg span {
     font-size: 80px;
-line-height: 70px;
-color: #c90d0d;
+    font-weight: 100px;
+line-height: 10px;
+/* color: rgb(252, 67, 64);; */
 text-transform: uppercase;
  }
 .text-bg h1, h3{
 color: rgb(10, 10, 10);
-padding-top: 20px;
-font-size: 40px;
+padding-top: 25px;
+font-size: 30px;
 line-height: 10px;
 padding-bottom: 30px;
 text-transform: uppercase;
 font-weight:bold;
 }
 .text-bg h2{
-   color: #e71212;
+   color: rgb(252, 67, 64);;
    padding-top: 20px;
    font-size: 80px;
    line-height: 85px;
@@ -61,9 +62,55 @@ text-align: center;
 border-radius: 30px;
 margin-right: 10px;
 }
-#fimls
-{
-}
-body{
+/* body{
     background-color:rgb(234, 234, 241);
+} */
+a span{
+    color: rgb(252, 67, 64);;
+    font-size: 39px;
+   font-style: initial;  
+
+/* padding: 100px 0px; */
+
+}
+.decale{
+    margin-left:px;
+}
+.decale{
+    margin-top: 25px;
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+.deplace a{
+    margin-left: 10px;
+    display: flex;
+    padding: 1px;
+    
+}
+.deplace a:hover{
+    background-color: rgb(252, 67, 64); ;
+    background-attachment: fixed;
+}
+a :active {
+    background-color: rgb(252, 67, 64); ;
+    background-attachment: fixed;
+}
+.recup  {
+    background-color: rgb(252, 67, 64);
+   
+}
+.border-start{
+   border-left: 3px;
+}
+.modifer
+{
+border: solid 2px;
+}
+.modal-footer
+{
+    align-items: center;
+    justify-content: flex-start;
 }
