--- a/Projects/Redline/style.css
+++ b/Projects/Redline/style.css
@@ -1,14 +1,16 @@
 #debut{  
-    background-image: url(img/cinema.jpg);
-    background-size: cover; 
+    background-image: url(img/ama/thor.jpg);
+    background-size:cover;
+    background-repeat: no-repeat; 
     background-position: center; 
     opacity: 1;
 }
-.navbar .navbar-brand
+#navbars
 {
-    text-decoration-color: white;
-    font-size: 30px;
-    font-weight: 20px;
+   color: white;
+    font-size: 40px;
+    font-weight: 10000px;
+
 }
 .navbar-brand{
     font-size: larger;
@@ -19,7 +21,7 @@
 .carousel-indicators {display: none;}
 .about .about-box h2 {
     padding: 2;
-    text-decoration-color: #020d0f;
+    text-decoration-color: #f3f5f5;
     line-height: 70px;
     font-size: 70px;
 }
@@ -33,7 +35,7 @@ line-height: 10px;
 text-transform: uppercase;
  }
 .text-bg h1, h3{
-color: rgb(10, 10, 10);
+color: rgb(250, 253, 253);
 padding-top: 25px;
 font-size: 30px;
 line-height: 10px;
@@ -52,15 +54,12 @@ font-weight:bold;
 }
 
 .text-bg a {
-font-size: 16px;
-background-color: #fff;
-color: #000;
-padding: 12px 0px;
-max-width: 253px;
-width: 100%;
-text-align: center;
-border-radius: 30px;
+font-size: 20px;
+color: #030303;
+padding: 10px 20px;
 margin-right: 10px;
+background-color: rgb(252, 67, 64);
+border-radius: 12px;
 }
 /* body{
     background-color:rgb(234, 234, 241);
@@ -73,12 +72,7 @@ a span{
 /* padding: 100px 0px; */
 
 }
-.decale{
-    margin-left:px;
-}
-.decale{
-    margin-top: 25px;
-}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -114,3 +108,66 @@ border: solid 2px;
     align-items: center;
     justify-content: flex-start;
 }
+.btns{
+ 
+        background-color: rgb(12, 12, 12); /* Fond noir */
+        color: white; /* Texte en blanc */
+        padding-left: 15px   10px;
+        font-size: 16px; /* Taille de la police */
+    }
+    
+    .btn:hover {
+        background-color: darkgray; /* Changement de couleur au survol */
+    }
+body {
+    background-image: url(img/ama/bg.jpg);
+    background-repeat: repeat;
+    
+}
+.nav-link{ 
+    color: #f3f5f5;
+font-size: 60px;
+}
+.login-card {
+    background-color: #252631;
+    margin: auto; 
+    width: 336px;
+     } 
+  .login-card .card-body {
+    border-radius: 10px; /* Arrondir les bordures */
+    background-color: #252631;
+    padding: 40px;
+   
+  }
+  .login-card .login-brand {
+    width: 70px;
+    height: 70px;
+    margin-bottom: 28px;
+    margin-left: auto;
+    margin-right: auto; }
+  .login-card .form-group {
+    margin-bottom: 1rem; }
+  .login-card .form-control {
+    color: #161515;
+    font-weight: 400; }
+  .login-card .form-control::-webkit-input-placeholder {
+    /* Edge */
+    color: #bbbbbb;
+    font-weight: 400; }
+  .login-card .form-control:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #bbbbbb;
+    font-weight: 400; }
+  .login-card .form-control::-moz-placeholder {
+    color: #bbbbbb;
+    font-weight: 400; }
+  .login-card .form-control::-ms-input-placeholder {
+    color: #bbbbbb;
+    font-weight: 400; }
+  .login-card .form-control::placeholder {
+    color: #bbbbbb;
+    font-weight: 400; 
+}
+
+
+  
